# aws-partners-datasette

./: .gitattributes  .gitignore  CLAUDE.md  Makefile  README.md  aws_certs.ipynb  build_database.py  create-summary-view.sh  fetch.sh  metadata.yaml  metadata.yml  pyproject.toml  requirements.txt  shell.nix
.github/workflows/: build.yml  history.yml
partners/: partners.metadata.json  partners.ndjson  summary.metadata.json  summary.ndjson  summary.ndjson.zst
plot/: index.html  script.js
