[project]
name = "aws-partners-datasette"
version = "0.1.0"
description = "Tracking AWS partners"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "datasette>=0.65.1",
    "datasette-block-robots>=1.1",
    "datasette-copyable>=0.3.2",
    "datasette-json-html>=1.0.1",
    "datasette-publish-fly>=1.3.1",
    "python-dateutil>=2.9.0.post0",
    "pytz>=2025.2",
    "requests>=2.32.5",
    "sqlite-diffable>=0.6",
    "sqlite-utils>=3.38",
]
